feat: add incubator vector moduleEnable jdk.incubator.vector module for native image builds